--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <meta property="og:title" content="Facebook" />
     <meta property="og:description" content="Connect with friends and the world around you on Facebook." />
     <meta property="og:image" content="https://static.xx.fbcdn.net/rsrc.php/v3/yj/r/gB76kJXPYJV.png" />
-    <script type="module" crossorigin src="index-DUrUYD5p.js"></script>
-    <link rel="stylesheet" crossorigin href="index-CUcl6F8R.css">
+    <script type="module" crossorigin src="index-Ds8F0I7w.js"></script>
+    <link rel="stylesheet" crossorigin href="index-C9P5cbsP.css">
   </head>
   <body>
     <div id="root"></div>
